force-app/main/default/objects/Contract/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <label>Agreement End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>