force-app/main/default/objects/Contract/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <label>Agreement Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Friendship</fullName>
                <default>true</default>
                <label>Friendship</label>
            </value>
            <value>
                <fullName>MOU</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>