force-app/main/default/objects/Contract/fields/Corporate_Interests__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Interests__c</fullName>
    <label>Corporate Interests</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
                <default>true</default>
                <label>TBD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>