force-app/main/default/objects/Contract/fields/Global_Affairs_Priority_Market__c.field-meta.xml
<CustomField>
    <fullName>Global_Affairs_Priority_Market__c</fullName>
    <label>Global Affairs Priority Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
                <default>true</default>
                <label>TBD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>