force-app/main/default/objects/Contract/fields/Provincial_MIT_In_Market_rep__c.field-meta.xml
<CustomField>
    <fullName>Provincial_MIT_In_Market_rep__c</fullName>
    <label>Provincial MIT In-Market rep</label>
    <type>Phone</type>
</CustomField>