force-app/main/default/objects/Contract/fields/SPER_Priority_Level__c.field-meta.xml
<CustomField>
    <fullName>SPER_Priority_Level__c</fullName>
    <label>SPER Priority Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>