force-app/main/default/objects/Contract/fields/WTC__c.field-meta.xml
<CustomField>
    <fullName>WTC__c</fullName>
    <label>WTC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
                <default>true</default>
                <label>TBD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>